# loki-android-wallet

./: build.gradle
app/: CMakeLists.txt
app/src/main/cpp/: monerujo.cpp
app/src/main/java/com/m2049r/xmrwallet/: LoginActivity.java
external-libs/: collect.sh
external-libs/docker/: Dockerfile
